<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animateLayoutChanges="true"
    android:id="@+id/activity_mainRelativeLayout"
	android:background="@drawable/background">

	<android.support.v7.widget.Toolbar
		android:id="@+id/main_toolbar"
		android:layout_width="match_parent"
		android:layout_height="25dp"
		android:background="@drawable/background_toolbar"
		android:elevation="4dp"
		android:minHeight="?attr/actionBarSize"
		app:title="@string/app_title"
		android:theme="?attr/actionBarTheme">

		<!--<View
			android:layout_marginStart="87dp"
			android:background="?android:attr/dividerHorizontal"
			android:layout_width="1px"
			android:layout_height="match_parent"/>-->

		<TextView
			android:id="@+id/main_text_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/state"
			android:layout_marginLeft="105dp"
			android:textColor="@color/puredark"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginEnd="5dp"
			android:orientation="horizontal">

			<Button android:textAllCaps="false"
				android:id="@+id/toolbar_button_home"
				android:layout_width="25dp"
				android:layout_height="25dp"
				android:layout_marginEnd="5dp"
				android:background="@drawable/ic_home"/>

			<Button android:textAllCaps="false"
				android:id="@+id/toolbar_button_exit"
				android:layout_width="25dp"
				android:layout_height="25dp"
				android:layout_marginEnd="5dp"
				android:background="@drawable/ic_close"/>

		</LinearLayout>

	</android.support.v7.widget.Toolbar>

	<LinearLayout
		android:id="@+id/layout_startgame"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="40dp"
		android:paddingLeft="30dp"
		android:paddingRight="20dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:background="@color/colorPrimary"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true">

		<LinearLayout
			android:layout_marginLeft="30dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/start"
				android:textColor="#F5F5F5"
				android:textSize="14sp"/>

			<TextView
                android:id="@+id/activity_main_versiontext"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/version"
				android:textColor="#F5F5F5"
				android:textSize="12sp"/>

		</LinearLayout>

		<TextView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"/>

		<Spinner
			android:id="@+id/spinner_choice_version"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_gravity="right|center_vertical"/>

	</LinearLayout>

	<ScrollView
		android:id="@+id/activity_mainScrollView"
		android:fillViewport="true"
		android:layout_width="180dp"
		android:layout_height="match_parent"
		android:layout_below="@id/main_toolbar">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="180dp"
			android:layout_height="match_parent"
			android:background="@drawable/background_layout_fictionlist">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/account"
				android:textSize="10sp"
				android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp"/>

			<View
				android:background="?android:attr/dividerVertical"
				android:layout_width="match_parent"
				android:layout_height="1px"/>

			<Button android:textAllCaps="false"
				android:id="@+id/main_button_user"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/layout_button_background"
				android:drawableStart="@drawable/steve"
				android:drawablePadding="6dp"
				android:gravity="center_vertical"
				android:paddingStart="15dp"
				android:text="@string/user"
				android:paddingEnd="0dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/game"
				android:textSize="10sp"
				android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp"/>

			<View
				android:background="?android:attr/dividerVertical"
				android:layout_width="match_parent"
				android:layout_height="1px"/>

			<Button android:textAllCaps="false"
				android:id="@+id/main_button_version"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/layout_button_background"
				android:drawableStart="@drawable/grass"
				android:drawablePadding="6dp"
				android:gravity="center_vertical"
				android:paddingStart="15dp"
				android:text="@string/gameCtr"
				android:paddingEnd="0dp"/>

			<Button android:textAllCaps="false"
				android:id="@+id/main_button_gamelist"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/layout_button_background"
				android:drawableStart="@drawable/bookshelf"
				android:drawablePadding="6dp"
				android:gravity="center_vertical"
				android:paddingStart="15dp"
				android:text="@string/gamelist"
				android:paddingEnd="0dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="gamedir"
				android:textSize="10sp"
				android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp"/>

			<View
				android:background="?android:attr/dividerVertical"
				android:layout_width="match_parent"
				android:layout_height="1px"/>

			<Button android:textAllCaps="false"
				android:id="@+id/main_button_gamedir"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/layout_button_background"
				android:drawableStart="@drawable/craft_table"
				android:drawablePadding="6dp"
				android:gravity="center_vertical"
				android:paddingStart="15dp"
				android:text="@string/currentdir"
				android:paddingEnd="0dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/launcher"
				android:textSize="10sp"
				android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp"/>

			<View
				android:background="?android:attr/dividerVertical"
				android:layout_width="match_parent"
				android:layout_height="1px"/>

			<Button android:textAllCaps="false"
				android:id="@+id/main_button_setting"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/layout_button_background"
				android:drawableStart="@drawable/command"
				android:drawablePadding="6dp"
				android:gravity="center_vertical"
				android:paddingStart="15dp"
				android:text="@string/launcherSetting"
				android:paddingEnd="0dp"/>

		</LinearLayout>

	</ScrollView>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_toRightOf="@id/activity_mainScrollView"
		android:layout_below="@id/main_toolbar">

		<View
			android:background="?android:attr/dividerHorizontal"
			android:layout_width="1px"
			android:layout_height="match_parent"/>

		<include
			layout="@layout/layout_user"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

		<include
			layout="@layout/layout_version"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

		<include
			layout="@layout/layout_gamelist"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

		<include
			layout="@layout/layout_gamedir"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

		<include
			layout="@layout/layout_setting"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>

	</RelativeLayout>

</RelativeLayout>

